--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "coqui-tts>=0.24.3",
+    "langchain>=0.3.20",
+    "langchain-community>=0.3.19",
     "nltk>=3.9.1",
+    "pymupdf>=1.25.4",
 ]
