--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,6 @@ dependencies = [
     "langchain-community>=0.3.19",
     "nltk>=3.9.1",
     "pymupdf>=1.25.4",
+    "pymupdf4llm>=0.0.17",
+    "pypdf>=5.4.0",
 ]
