--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "coqui-tts>=0.24.3",
+    "fastapi[standard]>=0.115.11",
     "langchain>=0.3.20",
     "langchain-community>=0.3.19",
     "nltk>=3.9.1",
