added audio join system

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ dependencies = [
     "fastapi[standard]>=0.115.11",
     "langchain>=0.3.20",
     "langchain-community>=0.3.19",
+    "moviepy>=2.1.2",
     "nltk>=3.9.1",
+    "pydub>=0.25.1",
     "pymupdf>=1.25.4",
     "pymupdf4llm>=0.0.17",
     "pypdf>=5.4.0",
